minitrace-macro/tests/trace/ui/err/has-ident-arguments.stderr
error: invalid argument
 --> tests/ui/err/has-ident-arguments.rs:3:1
  |
3 | #[trace(a, b)]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `trace` (in Nightly builds, run with -Z macro-backtrace for more info)
